--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Web</title>
-    <link rel="icon" type="image/x-icon" href="https://r2.easyimg.io/py4d95dyk/25694.png">
+    <link rel="icon" type="image/x-icon" href="https://i.imgur.com/wMDrEaS.jpeg">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
     <style>
